--- a/tmux.conf
+++ b/tmux.conf
@@ -42,6 +42,7 @@ set -g pane-border-style fg=colour8
 
 # -- user customizations -------------------------------------------------------       
 # this is the place to override or undo settings                                       
+set-option -g focus-events on
 
 # increase history size                                                                
 set -g history-limit 10000                                        
@@ -116,7 +117,7 @@ set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 # Set 256 colors
 # set -g default-terminal 'screen-256color'
-set -s default-terminal 'tmux-256color'
+set-option -a terminal-features 'alacritty:RGB'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
