--- a/tmux.conf
+++ b/tmux.conf
@@ -1,134 +1,79 @@
-######################
-### DESIGN CHANGES ###
-######################
-
-# loud or quiet?
-set -g visual-activity off
-set -g visual-bell off
-set -g visual-silence off
-setw -g monitor-activity off
+# No bells at all
 set -g bell-action none
- 
-#  modes
-# setw -g clock-mode-colour colour5
-# setw -g mode-style 'fg=colour1 bg=colour17 bold'
 
-# panes
-# set -g pane-border-style 'fg=colour17 bg=colour0'
-# set -g pane-active-border-style 'bg=colour0 fg=colour9'
+# Silence notifications and activities
+set -g visual-activity off
+set -g visual-silence off
+set -g monitor-activity off
 
-# border style
+# Enable mouse support
+set -g mouse on
+
+# Border styles for active and inactive panes
 set -g pane-active-border-style bg=default,fg=colour136
 set -g pane-border-style fg=colour8
 
-# statusbar
-# set -g status-position bottom
-# set -g status-justify left
-# set -g status-style 'bg=colour17 fg=colour137 dim'
-# set -g status-left ''
-# set -g status-right-length 50
-# set -g status-left-length 20
-
-# setw -g window-status-current-style 'fg=colour1 bg=colour22 bold'
-# setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
-
-# setw -g window-status-style 'fg=colour9 bg=colour235'
-# setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-# setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
-
-# messages
-# set -g message-style 'fg=colour232 bg=colour3 bold'
-
-# -- user customizations -------------------------------------------------------       
-# this is the place to override or undo settings                                       
+# Enable focus events for NeoVim compatibility
 set-option -g focus-events on
 
-# increase history size                                                                
-set -g history-limit 10000                                        
+# Increase command history size
+set -g history-limit 10000
 
-# start with mouse mode enabled                         
-# start with mouse mode enabled                                                        
-set -g mouse on
-setw -g mode-keys vi
-# force Vi mode                                                                        
-#   really you should export VISUAL or EDITOR environment variable, see manual         
-#set -g status-keys vi                                                                 
-#set -g mode-keys vi                                                                   
+# Enable 256-color support
+set -g default-terminal "tmux-256color"
 
-# replace C-b by C-a instead of using both prefixes                                    
+# Force Vi mode for navigation
+set -g mode-keys vi
+
+# Use `C-a` as the single tmux prefix (unbinding `C-b`)
 set -gu prefix2
-unbind C-a
 unbind C-b
+unbind C-a
 set -g prefix C-a
 bind C-a send-prefix
 
+# Enter copy mode with Escape or space
 unbind [
 unbind m
 bind Escape copy-mode
-
 unbind space
 bind-key space copy-mode \; send-key space
-# move status line to top                                                              
-#set -g status-position top                                                            
 
-# Set new panes to open in current directory
-# bind c new-window -c "#{pane_current_path}"
-# bind '"' split-window -c "#{pane_current_path}"
-# bind % split-window -h -c "#{pane_current_path}"
-
-# Split windows using é and "
-# unbind '"'
+# Custom pane splitting shortcuts
 unbind %
 bind é split-window -h
-# bind - split-window -v
 
+# Shortcut to enter search mode in copy mode
 bind-key / copy-mode \; send-key ?
 
+# Reduce escape time delay for quicker response
 set-option -sg escape-time 10
 
-# List of plugins
+# Shortcut to split window into 4 panes layout
+unbind t
+bind-key t split-window -h \; split-window -v \; select-pane -L \; split-window -v
+
+# Shortcut to activate synchronize-panes
+unbind s
+bind-key s setw synchronize-panes \; display-message "Toggeled synchronize panes"
+
+# Initialize tmux plugins
 set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-logging'
-set -g @logging-path "/tmp"
-
 set -g @plugin 'erikw/tmux-powerline'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
-# POWERLINE
+# Powerline and status bar customization
 set-option -g status on
 set-option -g status-interval 2
 set-option -g status-justify "left"
 set-option -g status-left-length 60
 set-option -g status-right-length 90
-# set-option -g status-left "#(~/.tmux/plugins/tmux-powerline/powerline.sh left)"
-# set-option -g status-right "#(~/.tmux/plugins/tmux-powerline/powerline.sh right)"
 set -g status-right '#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
+set -g @logging-path "/tmp"
 
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
-# set -g status-right "#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]"
-
-# set -g @plugin 'christoomey/vim-tmux-navigator'
-# set -g @plugin 'wfxr/tmux-power'
-# set -g @tmux_power_theme 'redwine'
-# set -g @plugin 'seebi/tmux-colors-solarized'
-# set -g @colors-solarized '256'
-# set -g @plugin 'tmux-plugins/tmux-copycat'
-
-# Set 256 colors
-# set -g default-terminal 'screen-256color'
-set-option -a terminal-features 'alacritty:RGB'
-
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @plugin "arcticicestudio/nord-tmux"
-set -g @dracula-show-powerline false
-# set -g @dracula-plugins "cpu-usage ram-usage"
-set -g @plugin 'tmux-plugins/tmux-yank'
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Initialize TMUX Plugin Manager (keep at the bottom)
 run '~/.tmux/plugins/tpm/tpm'
